tests/paczka1/fuzzy1/75040075.err
Error in line 1: NUeK9DINAB S169 92,3
Error in line 7: Gu3PZj S169 87,0
Error in line 14: u2eaz S131 67,1
Error in line 25: Gu3PZj S913 0,x
Error in line 22: r4t38X S169 72,8
